[gd_scene load_steps=12 format=2]

[ext_resource path="res://Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Alert.tscn" type="PackedScene" id=3]
[ext_resource path="res://engine/Engine.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/start.png" type="Texture" id=5]
[ext_resource path="res://assets/end.png" type="Texture" id=6]
[ext_resource path="res://assets/play.png" type="Texture" id=7]
[ext_resource path="res://Promote.tscn" type="PackedScene" id=8]
[ext_resource path="res://ConfigPop.tscn" type="PackedScene" id=9]
[ext_resource path="res://BattleReport.tscn" type="PackedScene" id=10]

[sub_resource type="ImageTexture" id=1]

[node name="Main" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 600 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 2 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 880.0
margin_bottom = 1004.0
custom_constants/separation = 20

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 860.0
margin_bottom = 94.0
custom_constants/separation = 20

[node name="VBox" type="VBoxContainer" parent="VBox/HBox"]
margin_right = 157.0
margin_bottom = 94.0
custom_constants/separation = 20

[node name="Start" type="Button" parent="VBox/HBox/VBox"]
margin_right = 157.0
margin_bottom = 20.0
text = "PLAY"

[node name="Ponder" type="HBoxContainer" parent="VBox/HBox/VBox"]
margin_top = 40.0
margin_right = 157.0
margin_bottom = 54.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="VBox/HBox/VBox/Ponder"]
margin_right = 105.0
margin_bottom = 14.0
text = "Move to ponder:"

[node name="Move" type="Label" parent="VBox/HBox/VBox/Ponder"]
margin_left = 125.0
margin_right = 157.0
margin_bottom = 14.0
text = "e6e5"

[node name="Config" type="Button" parent="VBox/HBox/VBox"]
margin_top = 74.0
margin_right = 157.0
margin_bottom = 94.0
text = "Configure"

[node name="Menu" type="VBoxContainer" parent="VBox/HBox"]
margin_left = 177.0
margin_right = 543.0
margin_bottom = 94.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Next" type="HBoxContainer" parent="VBox/HBox/Menu"]
margin_right = 366.0
margin_bottom = 20.0

[node name="Flip" type="Button" parent="VBox/HBox/Menu/Next"]
margin_right = 83.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -238.46, 107 )
text = "Next Move"
icon = SubResource( 1 )

[node name="Color" type="ColorRect" parent="VBox/HBox/Menu/Next"]
margin_left = 87.0
margin_right = 366.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Load" type="Button" parent="VBox/HBox/Menu"]
margin_top = 30.0
margin_right = 366.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -238.46, 107 )
text = "Load"

[node name="Save" type="Button" parent="VBox/HBox/Menu"]
margin_top = 60.0
margin_right = 366.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( -238.46, 107 )
text = "Save"

[node name="Options" type="VBoxContainer" parent="VBox/HBox"]
margin_left = 563.0
margin_right = 710.0
margin_bottom = 94.0
custom_constants/separation = 10

[node name="TB" type="HBoxContainer" parent="VBox/HBox/Options"]
modulate = Color( 0.337255, 0.415686, 0.823529, 1 )
margin_right = 147.0
margin_bottom = 21.0
custom_constants/separation = 10

[node name="Begin" type="TextureButton" parent="VBox/HBox/Options/TB"]
margin_right = 22.0
margin_bottom = 21.0
texture_normal = ExtResource( 5 )

[node name="Forward" type="TextureButton" parent="VBox/HBox/Options/TB"]
margin_left = 32.0
margin_right = 50.0
margin_bottom = 21.0
texture_normal = ExtResource( 7 )

[node name="End" type="TextureButton" parent="VBox/HBox/Options/TB"]
margin_left = 60.0
margin_right = 82.0
margin_bottom = 21.0
texture_normal = ExtResource( 6 )

[node name="Count" type="Label" parent="VBox/HBox/Options/TB"]
margin_left = 92.0
margin_top = 3.0
margin_right = 147.0
margin_bottom = 17.0
rect_min_size = Vector2( 55, 0 )
text = "000/000"

[node name="CheckBox" type="CheckBox" parent="VBox/HBox/Options"]
margin_top = 31.0
margin_right = 147.0
margin_bottom = 55.0
pressed = true
text = "Suggest moves"

[node name="Reset" type="Button" parent="VBox/HBox/Options"]
margin_top = 65.0
margin_right = 147.0
margin_bottom = 85.0
text = "Reset Board"

[node name="Grid" type="GridContainer" parent="VBox/HBox"]
margin_left = 730.0
margin_right = 860.0
margin_bottom = 94.0
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 2

[node name="Label" type="Label" parent="VBox/HBox/Grid"]
margin_right = 72.0
margin_bottom = 14.0
text = "Last move"

[node name="LastMove" type="Label" parent="VBox/HBox/Grid"]
margin_left = 92.0
margin_right = 130.0
margin_bottom = 14.0
rect_min_size = Vector2( 38, 0 )
text = "c2c4"

[node name="Label3" type="Label" parent="VBox/HBox/Grid"]
margin_top = 24.0
margin_right = 72.0
margin_bottom = 38.0
text = "Moves"

[node name="Moves" type="Label" parent="VBox/HBox/Grid"]
margin_left = 92.0
margin_top = 24.0
margin_right = 130.0
margin_bottom = 38.0

[node name="Label5" type="Label" parent="VBox/HBox/Grid"]
margin_top = 48.0
margin_right = 72.0
margin_bottom = 62.0
text = "Half moves"

[node name="HalfMoves" type="Label" parent="VBox/HBox/Grid"]
margin_left = 92.0
margin_top = 48.0
margin_right = 130.0
margin_bottom = 62.0

[node name="Board" parent="VBox" instance=ExtResource( 1 )]
visible = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 114.0
margin_right = 860.0
margin_bottom = 414.0
rect_min_size = Vector2( 300, 300 )
custom_constants/margin_right = 20

[node name="Spacer" type="Control" parent="VBox"]
margin_top = 434.0
margin_right = 860.0
margin_bottom = 444.0
rect_min_size = Vector2( 0, 10 )

[node name="BlackPieces" type="GridContainer" parent="VBox"]
margin_top = 464.0
margin_right = 860.0
margin_bottom = 714.0
size_flags_vertical = 3
custom_constants/vseparation = 5
custom_constants/hseparation = 5
columns = 8

[node name="WhitePieces" type="GridContainer" parent="VBox"]
margin_top = 734.0
margin_right = 860.0
margin_bottom = 984.0
size_flags_vertical = 3
custom_constants/vseparation = 5
custom_constants/hseparation = 5
columns = 8

[node name="Engine" parent="." instance=ExtResource( 4 )]

[node name="c" type="CanvasLayer" parent="."]

[node name="FileDialog" type="FileDialog" parent="c"]
margin_left = 21.0
margin_top = 23.0
margin_right = 458.0
margin_bottom = 448.0
access = 2
show_hidden_files = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alert" parent="c" instance=ExtResource( 3 )]
margin_bottom = 110.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="Promote" parent="c" instance=ExtResource( 8 )]

[node name="ConfigPop" parent="c" instance=ExtResource( 9 )]

[node name="BattleReport" parent="c" instance=ExtResource( 10 )]

[connection signal="button_down" from="VBox/HBox/VBox/Start" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="VBox/HBox/VBox/Config" to="." method="_on_Config_button_down"]
[connection signal="button_down" from="VBox/HBox/Menu/Next/Flip" to="." method="_on_Flip_button_down"]
[connection signal="button_down" from="VBox/HBox/Menu/Load" to="." method="_on_Load_button_down"]
[connection signal="button_down" from="VBox/HBox/Menu/Save" to="." method="_on_Save_button_down"]
[connection signal="button_down" from="VBox/HBox/Options/TB/Begin" to="." method="_on_Begin_button_down"]
[connection signal="button_down" from="VBox/HBox/Options/TB/Forward" to="." method="_on_Forward_button_down"]
[connection signal="button_down" from="VBox/HBox/Options/TB/End" to="." method="_on_End_button_down"]
[connection signal="button_up" from="VBox/HBox/Options/TB/End" to="." method="_on_End_button_up"]
[connection signal="toggled" from="VBox/HBox/Options/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="button_down" from="VBox/HBox/Options/Reset" to="." method="_on_Reset_button_down"]
[connection signal="fullmove" from="VBox/Board" to="." method="_on_Board_fullmove"]
[connection signal="halfmove" from="VBox/Board" to="." method="_on_Board_halfmove"]
[connection signal="done" from="Engine" to="." method="_on_Engine_done"]
[connection signal="file_selected" from="c/FileDialog" to="." method="_on_FileDialog_file_selected"]
